crates/aiken-lang/src/parser/expr/snapshots/record_create_labeled.snap
---
source: crates/aiken-lang/src/parser/expr/record.rs
description: "Code:\n\nUser { name: \"Aiken\", age, thing: 2 }"
---
Call {
    arguments: [
        CallArg {
            label: Some(
                "name",
            ),
            location: 7..20,
            value: ByteArray {
                location: 13..20,
                bytes: [
                    65,
                    105,
                    107,
                    101,
                    110,
                ],
                preferred_format: Utf8String,
            },
        },
        CallArg {
            label: Some(
                "age",
            ),
            location: 22..25,
            value: Var {
                location: 22..25,
                name: "age",
            },
        },
        CallArg {
            label: Some(
                "thing",
            ),
            location: 27..35,
            value: Int {
                location: 34..35,
                value: "2",
                base: Decimal {
                    numeric_underscore: false,
                },
            },
        },
    ],
    fun: Var {
        location: 0..4,
        name: "User",
    },
    location: 0..37,
}
