crates/aiken-lang/src/parser/expr/snapshots/record_enum.snap
---
source: crates/aiken-lang/src/parser/expr/record.rs
description: "Code:\n\nWinter"
---
Var {
    location: 0..6,
    name: "Winter",
}
