crates/aiken-lang/src/parser/expr/snapshots/todo_basic.snap
---
source: crates/aiken-lang/src/parser/expr/error_todo.rs
description: "Code:\n\ntodo @\"foo\"\n"
---
Trace {
    kind: Todo,
    location: 0..11,
    then: ErrorTerm {
        location: 0..11,
    },
    text: String {
        location: 5..11,
        value: "foo",
    },
}
